--- a/config.toml
+++ b/config.toml
@@ -58,4 +58,5 @@ enableRobotsTXT = true
   background_color_class = "bg-black"
   featured_image = "/images/bk.jpg"
   recent_posts_number = 2
-  mainSections = ["posts"]
+  mainSections = ["accommodation"]
+  recent_copy = "ACCOUMENTS"
