--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "My New Hugo Site"
-baseURL = ""
+baseURL = "http://localhost"
 languageCode = "en-us"
 theme = "ananke"
 resourceDir = "./resources"
@@ -10,20 +10,6 @@ Paginate = 3 # this is set low for demonstrating with dummy content. Set to a hi
 googleAnalytics = ""
 enableRobotsTXT = true
 
-[menu]
-  [[menu.main]]
-    name = "ACCOMMIDATION"
-    post = "<span class='alert'>New!</span>"
-    pre = "<i class='fa fa-road'></i>"
-    url = "/accommodation/"
-    weight = -100
-
-  [[menu.main]]
-    identifier = "about"
-    name = "CONTACT"
-    pre = "<i class='fa fa-heart'></i>"
-    url = "/about/"
-    weight = -110
 
 
 [languages]
@@ -31,10 +17,41 @@ enableRobotsTXT = true
     title = "QIAN DENG HOTEL"
     weight = 1
     contentDir = "content/en"
+    [languages.en.params]
+      twitter = "https://twitter.com/GoHugoIO"
+    [languages.en.menu]
+      [[languages.en.menu.main]]
+        name = "ACCOMMIDATION"
+        post = "<span class='alert'>New!</span>"
+        pre = "<i class='fa fa-road'></i>"
+        url = "/accommodation/"
+        weight = -100
+
+      [[languages.en.menu.main]]
+        identifier = "about"
+        name = "CONTACT"
+        pre = "<i class='fa fa-heart'></i>"
+        url = "/about/"
+        weight = -110
+
   [languages.zh]
     title = "千灯酒店"
     weight = 2
     contentDir = "content/zh"
+    [languages.zh.menu]
+      [[languages.zh.menu.main]]
+        name = "住宿"
+        post = "<span class='alert'>New!</span>"
+        pre = "<i class='fa fa-road'></i>"
+        url = "/zh/accommodation/"
+        weight = -100
+
+      [[languages.zh.menu.main]]
+        identifier = "about"
+        name = "订房"
+        pre = "<i class='fa fa-heart'></i>"
+        url = "/zh/about/"
+        weight = -110
 
 [sitemap]
   changefreq = "monthly"
@@ -45,17 +62,6 @@ enableRobotsTXT = true
   favicon = ""
   site_logo = "/images/logo.png"
   description = "The last theme you'll ever need. Maybe."
-  facebook = ""
-  twitter = "https://twitter.com/GoHugoIO"
-  instagram = ""
-  youtube = ""
-  github = ""
-  gitlab = ""
-  linkedin = ""
-  mastodon = ""
-  slack = ""
-  stackoverflow = ""
-  rss = ""
   background_color_class = "bg-black"
   featured_image = "/images/huayuan.jpg"
   recent_posts_number = 2
