--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,16 @@
 version: "3"
 
 services:
-  server:
-    image: klakegg/hugo:0.83.1-ext-alpine
-    command: server -D
-    volumes:
-      - ".:/src"
+  # server:
+  #   image: klakegg/hugo:0.83.1-ext-alpine
+  #   command: server -D
+  #   volumes:
+  #     - ".:/src"
+  #   ports:
+  #     - "1313:1313"
+  client:
+    image: nginx
     ports:
-      - "1313:1313"
+      - 80:80
+    volumes:
+      - ./public:/usr/share/nginx/html
